--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install -e .[dev]
           python -m pip install invoke d2py
-          invoke init
 
       # - name: 👷‍ Install Dot and pandoc
       #   run: |
