--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -70,7 +70,7 @@ jobs:
           sudo apt-get update && sudo apt-get upgrade
           sudo apt install build-essential python3-dev libcairo2-dev libpango1.0-dev ffmpeg
           pip install --upgrade pip
-          pip install taolib invoke
+          pip install taolib invoke mystx
           pip install -e .[doc] --upgrade
           conda install -c conda-forge pandoc compilers cppyy
           conda install -c conda-forge ffmpeg manim
