ci(workflow): 移除重复的manim安装步骤
简化依赖安装流程，避免重复安装manim

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -73,8 +73,7 @@ jobs:
           pip install taolib invoke mystx
           pip install -e .[doc] --upgrade
           conda install -c conda-forge pandoc compilers cppyy
-          conda install -c conda-forge ffmpeg manim
-          pip install manim
+          conda install -c conda-forge ffmpeg
           invoke doc
       - name: Setup Pages
         uses: actions/configure-pages@main
